fix(widgets-wrapper): title and overflow

--- a/packages/webcomponents/widgets-wrapper/src/components/widget/style.scss
+++ b/packages/webcomponents/widgets-wrapper/src/components/widget/style.scss
@@ -195,6 +195,7 @@ $vivible-items: 3;
           > div {
             display: flex;
             flex-direction: column;
+            overflow: hidden;
 
             > span {
               white-space: nowrap;
